add a fork me image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8">
         <title>Drake's Favorite Album</title>
         <link rel="icon" href="app/assets/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="app/app.css">
     </head>
     <body>
+        <a href="https://github.com/sadpandabear/i-love-this-album-more-than-i-love-myself">
+            <img class="fork" src="app/assets/fork.png">
+        </a> 
         <canvas id="drawer" height="500" width="700"></canvas>
 
         <input type="file" id="btnAlbum" accept="image/*">
